--- a/src/components/MapView.css
+++ b/src/components/MapView.css
@@ -1,13 +1,34 @@
-.map-container {
-  position: absolute; /* Прави картата да заема цялата видима част */
-  top: 60px; /* Регулирайте това спрямо височината на хедъра */
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 0;
+.leaflet-container {
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  filter: none; /* Remove filter from the leaflet container */
 }
 
-.leaflet-container {
-  width: 100%;
-  height: 100%;
+.legend {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+}
+
+.legend h4 {
+  margin: 0 0 10px;
+  font-size: 16px;
+}
+
+.legend div {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.legend img {
+  width: 20px;
+  margin-right: 10px;
 }
